[project]
name = "ComfyUI-ScriptFlow"
description = "Python script node for ComfyUI supporting math, calc, and logic with multi output. Handle conditional workflows, auto-select resolution, parse LLM outputs, and generate filenames — all in one flexible node."
version = "1.0.1"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = []

[project.urls]
Repository = "https://github.com/kantan-kanto/ComfyUI-ScriptFlow"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/kantan-kanto/ComfyUI-ScriptFlow/blob/main/README.md"
"Bug Tracker" = "https://github.com/kantan-kanto/ComfyUI-ScriptFlow/issues"

[tool.comfy]
PublisherId = "kantan-kanto"
DisplayName = "ComfyUI-ScriptFlow"
# Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

